--- a/modules/multi_step/templates/run_test_script.tmpl
+++ b/modules/multi_step/templates/run_test_script.tmpl
@@ -1,7 +1,6 @@
 #!/bin/sh
 
-# api_key="$DATADOG_API_KEY"
-# app_key="$DATADOG_APP_KEY"
+set -o pipefail
 
 curl -X POST \
 -H 'Content-Type: application/json' \
